# discord-emoji

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/demojiprocess/: __init__.py  main.py
src/demojiprocess/resources/: __init__.py
src/discordemoji/resources/: dictionaries.py
src/tests/: tests.py
