[metadata]
author = PommeBleue
author_email = amarourama@yahoo.fr
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    Topic :: Text Processing
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = A simple processing script that accurately detects, replaces, removes and converts to code point emojis supported by Discord in text strings.
keywords =
    emoji
    emojis
    discord
    discord.py
    unicode
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = demojiprocess
project_urls =
    Source = https://github.com/PommeBleue/discord-emoji
    Documentation = https://github.com/PommeBleue/discord-emoji/blob/master/README.md
    Bug Reports = https://github.com/PommeBleue/discord-emoji/issues
url = https://github.com/PommeBleue/discord-emoji
version = 0.1.3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    src/tests